--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <!-- Українською: Декларація типу документу HTML5 / English: HTML5 document type declaration -->
 <html lang="en">
   <!-- Українською: Вказує мову сторінки / English: Specifies page language -->
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <!-- Українською: Кодування символів (UTF-8 підтримує всі мови) / English: Character encoding (UTF-8 supports all languages) -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <!-- Українською: Налаштування адаптивного дизайну / English: Responsive design settings -->
     <title>WEBSTUDIO</title>
     <!-- Українською: Заголовок сторінки (вкладка браузера) / English: Page title (browser tab) -->
-    <meta name="description" content="#WEBSTUDIO" />
+    <meta name="description" content="#WEBSTUDIO" >
     <!-- Українською: Опис сторінки для SEO / English: Page description for SEO -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
     <!-- Українською: Підключення CSS стилів / English: CSS stylesheet link -->
   </head>
   <body class="page">
@@ -172,7 +172,7 @@
               width="264"
               height="260"
               loading="lazy"
-            />
+            >
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -193,7 +193,7 @@
               width="264"
               height="260"
               loading="lazy"
-            />
+            >
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -214,7 +214,7 @@
               width="264"
               height="260"
               loading="lazy"
-            />
+            >
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -235,7 +235,7 @@
               width="264"
               height="260"
               loading="lazy"
-            />
+            >
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
