--- a/index.html
+++ b/index.html
@@ -17,21 +17,14 @@
   <body class="page">
     <header class="header">
       <!-- Українською: Верхня частина сторінки (лого, навігація) / English: Top section (logo, navigation) -->
-      <!-- !!!Logo!!! -->
-      <h1 class="page-title">
-        <!-- Українською: Заголовок 1 рівня / English: Heading level 1 -->
-        <a class="logo" href="./index.html" target="_self" rel="noopener">
-          <!-- Українською: Гіперпосилання / English: Hyperlink -->
-
-          <span class="logo-text">
-            <!-- Українською: Рядковий контейнер / English: Inline container -->
-            WEB </span
-          >STUDIO
-        </a>
-      </h1>
       <!-- !!!Navigation!!! -->
       <nav class="navigation">
         <!-- Українською: Блок навігації / English: Navigation block -->
+        <!-- !!!Logo!!! -->
+        <a class="logo" href="./index.html" target="_self" rel="noopener">
+          <!-- Українською: Гіперпосилання / English: Hyperlink -->
+          >WEBSTUDIO
+        </a>
         <ul class="navigation-list">
           <!-- Українською: Ненумерований список / English: Unordered List -->
           <li class="navigation-list-item">
@@ -57,27 +50,33 @@
           </li>
         </ul>
       </nav>
-      <address class="address">
-        <!-- Українською: Контактна інформація / English: Contact Information -->
-        <a
-          class="address-mailto"
-          href="mailto:info@devstudio.com"
-          target="_blank"
-          rel="noopener"
-        >
-          <!-- Українською: Гіперпосилання / English: Hyperlink -->
-          info@devstudio.com
-        </a>
-        <a
-          class="address-tel"
-          href="tel:+110001111111"
-          target="_blank"
-          rel="noopener"
-        >
-          <!-- Українською: Гіперпосилання / English: Hyperlink -->
-          +11 (000) 111-11-11
-        </a>
-      </address>
+      <ul class="navigation-list">
+        <!-- Українською: Ненумерований список / English: Unordered List -->
+        <li class="navigation-list-item">
+          <!-- Українською: Елемент списку / English: List item -->
+          <a
+            class="navigation-list-item-mailto"
+            href="mailto:info@devstudio.com"
+            target="_blank"
+            rel="noopener"
+          >
+            <!-- Українською: Гіперпосилання / English: Hyperlink -->
+            info@devstudio.com
+          </a>
+        </li>
+        <li class="navigation-list-item">
+          <!-- Українською: Елемент списку / English: List item -->
+          <a
+            class="navigation-list-item-tel"
+            href="tel:+110001111111"
+            target="_blank"
+            rel="noopener"
+          >
+            <!-- Українською: Гіперпосилання / English: Hyperlink -->
+            +11 (000) 111-11-11
+          </a>
+        </li>
+      </ul>
     </header>
     <main class="main">
       <!-- Українською: Основний вміст сторінки / English: Main page content -->
@@ -85,11 +84,9 @@
       <!-- !!!section HERO!!! -->
       <section class="section-hero">
         <!-- Українською: Тематична група контенту / English: Thematic content group -->
-        <h2 class="section-hero__title" id="studio">HERO</h2>
-        <p class="paragraph">
-          <!-- Українською: Абзац / English: Paragraph -->
+        <h1 class="section-hero__title" id="studio">
           Effective Solutions for Your Business
-        </p>
+        </h1>
         <button class="btn" type="button">
           <!-- Українською: Кнопка / English: Button -->
           Order Service
@@ -133,7 +130,6 @@
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
               Diligence
             </h3>
-
             <p class="feature-list-item-paragraph">
               <!-- Українською: Абзац / English: Paragraph -->
               Research and confirm brands that present the strongest digital
@@ -167,12 +163,11 @@
             <!-- Українською: Елемент списку / English: List item -->
             <img
               class="image"
-              src="./images/img-1.webp"
+              src="./images/img-1.jpg"
               alt="foto Mark Guerrero"
               width="264"
               height="260"
-              loading="lazy"
-            >
+              loading="lazy">
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -188,12 +183,11 @@
             <!-- Українською: Елемент списку / English: List item -->
             <img
               class="image"
-              src="./images/img-2.webp"
+              src="./images/img-2.jpg"
               alt="foto Tom Ford"
               width="264"
               height="260"
-              loading="lazy"
-            >
+              loading="lazy">
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -209,12 +203,11 @@
             <!-- Українською: Елемент списку / English: List item -->
             <img
               class="image"
-              src="./images/img-3.webp"
+              src="./images/img-3.jpg"
               alt="foto Camila Garcia"
               width="264"
               height="260"
-              loading="lazy"
-            >
+              loading="lazy">
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -230,12 +223,11 @@
             <!-- Українською: Елемент списку / English: List item -->
             <img
               class="image"
-              src="./images/img-4.webp"
+              src="./images/img-4.jpg"
               alt="foto Daniel Wilson"
               width="264"
               height="260"
-              loading="lazy"
-            >
+              loading="lazy">
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -254,11 +246,7 @@
       <!-- !!!Logo!!! -->
       <a class="logo" href="./index.html" target="_self" rel="noopener">
         <!-- Українською: Гіперпосилання / English: Hyperlink -->
-
-        <span class="logo-text">
-          <!-- Українською: Рядковий контейнер / English: Inline container -->
-          WEB </span
-        >STUDIO
+        WEBSTUDIO
       </a>
       <p class="footer-paragraph">
         <!-- Українською: Абзац / English: Paragraph -->
