--- a/index.html
+++ b/index.html
@@ -23,32 +23,36 @@
         <!-- !!!Logo!!! -->
         <a class="logo" href="./index.html" target="_self" rel="noopener">
           <!-- Українською: Гіперпосилання / English: Hyperlink -->
-          >WEBSTUDIO
+          >WebStudio
         </a>
-        <ul class="navigation-list">
-          <!-- Українською: Ненумерований список / English: Unordered List -->
-          <li class="navigation-list-item">
-            <!-- Українською: Елемент списку / English: List item -->
-            <a class="navigation-list-link" href="#studio">
-              <!-- Українською: Навігаційне посилання / English: Navigation link -->
-              Studio
-            </a>
-          </li>
-          <li class="navigation-list-item">
-            <!-- Українською: Елемент списку / English: List item -->
-            <a class="navigation-list-link" href="#portfolio">
-              <!-- Українською: Навігаційне посилання / English: Navigation link -->
-              Portfolio
-            </a>
-          </li>
-          <li class="navigation-list-item">
-            <!-- Українською: Елемент списку / English: List item -->
-            <a class="navigation-list-link" href="#contacts">
-              <!-- Українською: Навігаційне посилання / English: Navigation link -->
-              Contacts
-            </a>
-          </li>
-        </ul>
+        <address class="address">
+          <!-- Українською: Контактна інформація / English: Contact Information -->
+
+          <ul class="navigation-list">
+            <!-- Українською: Ненумерований список / English: Unordered List -->
+            <li class="navigation-list-item">
+              <!-- Українською: Елемент списку / English: List item -->
+              <a class="navigation-list-link" href="#studio">
+                <!-- Українською: Навігаційне посилання / English: Navigation link -->
+                Studio
+              </a>
+            </li>
+            <li class="navigation-list-item">
+              <!-- Українською: Елемент списку / English: List item -->
+              <a class="navigation-list-link" href="#portfolio">
+                <!-- Українською: Навігаційне посилання / English: Navigation link -->
+                Portfolio
+              </a>
+            </li>
+            <li class="navigation-list-item">
+              <!-- Українською: Елемент списку / English: List item -->
+              <a class="navigation-list-link" href="#contacts">
+                <!-- Українською: Навігаційне посилання / English: Navigation link -->
+                Contacts
+              </a>
+            </li>
+          </ul>
+        </address>
       </nav>
       <ul class="navigation-list">
         <!-- Українською: Ненумерований список / English: Unordered List -->
@@ -132,8 +136,8 @@
             </h3>
             <p class="feature-list-item-paragraph">
               <!-- Українською: Абзац / English: Paragraph -->
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
             </p>
           </li>
           <li class="feature-list-item">
@@ -167,7 +171,8 @@
               alt="foto Mark Guerrero"
               width="264"
               height="260"
-              loading="lazy">
+              loading="lazy"
+            >
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -187,7 +192,8 @@
               alt="foto Tom Ford"
               width="264"
               height="260"
-              loading="lazy">
+              loading="lazy"
+            >
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -207,7 +213,8 @@
               alt="foto Camila Garcia"
               width="264"
               height="260"
-              loading="lazy">
+              loading="lazy"
+            >
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -227,7 +234,8 @@
               alt="foto Daniel Wilson"
               width="264"
               height="260"
-              loading="lazy">
+              loading="lazy"
+            >
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -246,7 +254,7 @@
       <!-- !!!Logo!!! -->
       <a class="logo" href="./index.html" target="_self" rel="noopener">
         <!-- Українською: Гіперпосилання / English: Hyperlink -->
-        WEBSTUDIO
+        WebStudio
       </a>
       <p class="footer-paragraph">
         <!-- Українською: Абзац / English: Paragraph -->
