--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- !!!Logo!!! -->
         <a class="logo" href="./index.html" target="_self" rel="noopener">
           <!-- Українською: Гіперпосилання / English: Hyperlink -->
-          >WebStudio
+          WebStudio
         </a>
         <address class="address">
           <!-- Українською: Контактна інформація / English: Contact Information -->
