--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <!-- Українською: Декларація типу документу HTML5 / English: HTML5 document type declaration -->
 <html lang="en">
   <!-- Українською: Вказує мову сторінки / English: Specifies page language -->
   <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8" />
     <!-- Українською: Кодування символів (UTF-8 підтримує всі мови) / English: Character encoding (UTF-8 supports all languages) -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Українською: Налаштування адаптивного дизайну / English: Responsive design settings -->
     <title>WEBSTUDIO</title>
     <!-- Українською: Заголовок сторінки (вкладка браузера) / English: Page title (browser tab) -->
-    <meta name="description" content="#WEBSTUDIO" >
+    <meta name="description" content="#WEBSTUDIO" />
     <!-- Українською: Опис сторінки для SEO / English: Page description for SEO -->
     <!-- <link rel="stylesheet" href="./css/style.css" /> -->
     <!-- Українською: Підключення CSS стилів / English: CSS stylesheet link -->
@@ -25,62 +25,62 @@
           <!-- Українською: Гіперпосилання / English: Hyperlink -->
           WebStudio
         </a>
-        <address class="address">
-          <!-- Українською: Контактна інформація / English: Contact Information -->
 
-          <ul class="navigation-list">
-            <!-- Українською: Ненумерований список / English: Unordered List -->
-            <li class="navigation-list-item">
-              <!-- Українською: Елемент списку / English: List item -->
-              <a class="navigation-list-link" href="#studio">
-                <!-- Українською: Навігаційне посилання / English: Navigation link -->
-                Studio
-              </a>
-            </li>
-            <li class="navigation-list-item">
-              <!-- Українською: Елемент списку / English: List item -->
-              <a class="navigation-list-link" href="#portfolio">
-                <!-- Українською: Навігаційне посилання / English: Navigation link -->
-                Portfolio
-              </a>
-            </li>
-            <li class="navigation-list-item">
-              <!-- Українською: Елемент списку / English: List item -->
-              <a class="navigation-list-link" href="#contacts">
-                <!-- Українською: Навігаційне посилання / English: Navigation link -->
-                Contacts
-              </a>
-            </li>
-          </ul>
-        </address>
+        <ul class="navigation-list">
+          <!-- Українською: Ненумерований список / English: Unordered List -->
+          <li class="navigation-list-item">
+            <!-- Українською: Елемент списку / English: List item -->
+            <a class="navigation-list-link" href="">
+              <!-- Українською: Навігаційне посилання / English: Navigation link -->
+              Studio
+            </a>
+          </li>
+          <li class="navigation-list-item">
+            <!-- Українською: Елемент списку / English: List item -->
+            <a class="navigation-list-link" href="">
+              <!-- Українською: Навігаційне посилання / English: Navigation link -->
+              Portfolio
+            </a>
+          </li>
+          <li class="navigation-list-item">
+            <!-- Українською: Елемент списку / English: List item -->
+            <a class="navigation-list-link" href="">
+              <!-- Українською: Навігаційне посилання / English: Navigation link -->
+              Contacts
+            </a>
+          </li>
+        </ul>
       </nav>
-      <ul class="navigation-list">
-        <!-- Українською: Ненумерований список / English: Unordered List -->
-        <li class="navigation-list-item">
-          <!-- Українською: Елемент списку / English: List item -->
-          <a
-            class="navigation-list-item-mailto"
-            href="mailto:info@devstudio.com"
-            target="_blank"
-            rel="noopener"
-          >
-            <!-- Українською: Гіперпосилання / English: Hyperlink -->
-            info@devstudio.com
-          </a>
-        </li>
-        <li class="navigation-list-item">
-          <!-- Українською: Елемент списку / English: List item -->
-          <a
-            class="navigation-list-item-tel"
-            href="tel:+110001111111"
-            target="_blank"
-            rel="noopener"
-          >
-            <!-- Українською: Гіперпосилання / English: Hyperlink -->
-            +11 (000) 111-11-11
-          </a>
-        </li>
-      </ul>
+      <address class="address">
+        <!-- Українською: Контактна інформація / English: Contact Information -->
+        <ul class="navigation-list">
+          <!-- Українською: Ненумерований список / English: Unordered List -->
+          <li class="navigation-list-item">
+            <!-- Українською: Елемент списку / English: List item -->
+            <a
+              class="navigation-list-item-mailto"
+              href="mailto:info@devstudio.com"
+              target="_blank"
+              rel="noopener"
+            >
+              <!-- Українською: Гіперпосилання / English: Hyperlink -->
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="navigation-list-item">
+            <!-- Українською: Елемент списку / English: List item -->
+            <a
+              class="navigation-list-item-tel"
+              href="tel:+110001111111"
+              target="_blank"
+              rel="noopener"
+            >
+              <!-- Українською: Гіперпосилання / English: Hyperlink -->
+              +11 (000) 111-11-11
+            </a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main class="main">
       <!-- Українською: Основний вміст сторінки / English: Main page content -->
@@ -172,7 +172,7 @@
               width="264"
               height="260"
               loading="lazy"
-            >
+            />
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -193,7 +193,7 @@
               width="264"
               height="260"
               loading="lazy"
-            >
+            />
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -214,7 +214,7 @@
               width="264"
               height="260"
               loading="lazy"
-            >
+            />
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -235,7 +235,7 @@
               width="264"
               height="260"
               loading="lazy"
-            >
+            />
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
