edit hw-01 for release

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
               class="navigation-list-item-mailto"
               href="mailto:info@devstudio.com"
               target="_blank"
-              rel="noopener"
-            >
+              rel="noopener">
               <!-- Українською: Гіперпосилання / English: Hyperlink -->
               info@devstudio.com
             </a>
@@ -75,8 +74,7 @@
               class="navigation-list-item-tel"
               href="tel:+110001111111"
               target="_blank"
-              rel="noopener"
-            >
+              rel="noopener">
               <!-- Українською: Гіперпосилання / English: Hyperlink -->
               +11 (000) 111-11-11
             </a>
@@ -90,9 +88,7 @@
       <!-- !!!section HERO!!! -->
       <section class="section-hero">
         <!-- Українською: Тематична група контенту / English: Thematic content group -->
-        <h1 class="section-hero__title" id="studio">
-          Effective Solutions for Your Business
-        </h1>
+        <h1 class="section-hero__title" id="studio"> Effective Solutions for Your Business </h1>
         <button class="btn" type="button">
           <!-- Українською: Кнопка / English: Button -->
           Order Service
@@ -113,8 +109,8 @@
             </h3>
             <p class="feature-list-item-paragraph">
               <!-- Українською: Абзац / English: Paragraph -->
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
+              Our goal is to identify the business problem to walk away with the perfect and
+              creative solution.
             </p>
           </li>
           <li class="feature-list-item">
@@ -126,8 +122,8 @@
 
             <p class="feature-list-item-paragraph">
               <!-- Українською: Абзац / English: Paragraph -->
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
+              Bring the key message to the brand's audience for the best price within the shortest
+              possible time.
             </p>
           </li>
           <li class="feature-list-item">
@@ -138,8 +134,8 @@
             </h3>
             <p class="feature-list-item-paragraph">
               <!-- Українською: Абзац / English: Paragraph -->
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
+              Research and confirm brands with the strongest digital growth opportunities and
+              minimize risk.
             </p>
           </li>
           <li class="feature-list-item">
@@ -151,8 +147,8 @@
 
             <p class="feature-list-item-paragraph">
               <!-- Українською: Абзац / English: Paragraph -->
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
+              Design practice focused on digital experiences. We bring forth a deep passion for
+              problem-solving.
             </p>
           </li>
         </ul>
@@ -173,8 +169,7 @@
               alt="foto Mark Guerrero"
               width="264"
               height="260"
-              loading="lazy"
-            >
+              loading="lazy">
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -194,8 +189,7 @@
               alt="foto Tom Ford"
               width="264"
               height="260"
-              loading="lazy"
-            >
+              loading="lazy">
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -215,8 +209,7 @@
               alt="foto Camila Garcia"
               width="264"
               height="260"
-              loading="lazy"
-            >
+              loading="lazy">
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -236,8 +229,7 @@
               alt="foto Daniel Wilson"
               width="264"
               height="260"
-              loading="lazy"
-            >
+              loading="lazy">
             <!-- Українською: Зображення / English: Image -->
             <h3 class="team-list-item-subtitle">
               <!-- Українською: Заголовок 3 рівня / English: Heading level 3 -->
@@ -260,8 +252,8 @@
       </a>
       <p class="footer-paragraph">
         <!-- Українською: Абзац / English: Paragraph -->
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.
       </p>
     </footer>
   </body>
